# dsn6file

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
src/dsn6file/: __init__.py
tests/: test_load.py
tests/data/: 6c10_2fofc.dsn6  6c10_2fofc.mrc
